
7.x-1.14.x
----------
 - #1903 Add support for tab-delimited files (TSV) in resources/recline preview.
 - #2001 Improve REST API documentation.
 - #1991 Fix host IP replacement on script used to recconect the MySQL container. 
 - #1942 DevOps: Restore drush commands to deal with orphaned resources.
 - #1943 Update tests to be more compatible with client sites, multiple testing and devops improvements.
 - #1962 Recline.view.nvd3.js: Fixed display of data with zero as values.
 - #1888 Added validation on axis tick settings on visualization_entity.
 - #1725 Fix `ahoy dkan uli` output login link.
 - #1881 Fix yaml syntaxt to make it standard. 
 - #1853 Update chart documentation.
 - #1839 Add help text and improve UI on the chart form for better clarity.
 - #1827 Remove option to import TABed CSV files into datastore. 
 - #1807 Add admin_views module for enhanced content and file filtering.
 - #1990 DevOps: Automatically populate required fields when running behat tests. 
 - #1938 DevOps: Allow behat tests to be skipped in circle.
 - #1842 Add help text to explain the pager on data previews.

7.x-1.13.4 2017-06-30
---------------------
 - #1983 Apply services security update 3.20 for DRUPAL-SA-CONTRIB-2017-054
 - #1877 Fix broken update that tries to migrate fields that may not exist (primarily due to Federal Extras upgrade)
 - #1960 Update field_group_table to 1.6
 - #1950 Update modules: chosen to 2.1, context to 3.7, date to 2.10, diff to 3.3, double_field to 2.5, entityreference to 1.4, menu_badges to 1.3, module_filter to 2.1, panels to 3.9, panopoly_widgets to 1.45, panopoly_images to 1.45, rules to 2.10, roleassign to 1.2, search_api to 1.21, search_api_db to 1.6, simple_gmap to 1.4, token to 1.7, uuid to 1.0, views_bulk_operations to 3.4, workbench_email to 3.12, drafty to 1.0-beta4, file_entity to 2.2, media to 2.8, media_youtube to 3.4, menu_token to 1.0-beta7, views to 3.16, field_group_table to 1.6, radix to 3.6 and file_resup to revision 6cf030c.